# bizniz-2

./: .gitignore  CLAUDE.md  README.md  bizniz.yaml  pyproject.toml  requirements.txt  test_expenses.json
autocoder/: autocoder.py  autocoder_types.py  base_validator.py  evaluate_code.py
autocoder.egg-info/: PKG-INFO  SOURCES.txt
autocoder/clients/: base_ai_client.py
autocoder/coding_environment/: openai_35_example.py  openai_4mini_cities_example.py  openai_4mini_example.py  openai_config.yaml  scratchpad.py
autocoder/prompts/: generate_prompts.py  prompt_schemas.py  repair_prompt.py  verification_prompt.py
autocoder/tests/: conftest.py  mock_validator.py
bizniz/: base_ai_agent.py  cleanup.py  pytest.ini
bizniz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bizniz/_deprecated/: README.md  quick_debugger.py  (+1 more)
docs/: README.md  agent_error_audit.md  home.md  pipeline_sequence.md  roadmap.md  ux_storybook_e2e_runbook.md
examples/: auto_architect.py  auto_engineer.py  autocoder_standalone.py  autotester_standalone.py  blast_config.yaml  blast_config_frontend.yaml  blast_config_gemini.yaml  code_metadata.py  codegen_blast.py  codegen_frontend.py  coding_orchestrator.py  debug_integration.py  debug_ux.py  engineer.py  frontend_iterate.py  milestone_build.py  re_engineer.py  run_stability_test.py  simple_frontend.py  stability_test.sh  ux_report.py  v2_audit.py  v2_backfill_ledger.py  v2_build.py  workspace_db.py
tests/: test_examples_smoke.py
verix/: base_ai_agent.py  pytest.ini
verix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1096 files in other folders)
