[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "autocoder"
version = "0.1.0"
description = "Autocoder system"
requires-python = ">=3.10"
authors = [
    {name = "Jamey Harris", email = "jameycharris@yahoo.com"},
    {name = "Abba Tregobov", email = "atregobo@gmail.com"},
]


dynamic = ["dependencies"]


[tool.setuptools]
packages = ["autocoder"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }