[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "verix"
version = "0.1.0"
description = "AI Coding system"
requires-python = ">=3.10"
authors = [
    {name = "Jamey Harris", email = "jameycharris@yahoo.com"},
    {name = "Abba Tregobov", email = "atregobo@gmail.com"},
]


dynamic = ["dependencies"]


[tool.setuptools]
packages = ["verix"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }