[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "bizniz"
version = "0.1.0"
description = "AI Coding system"
requires-python = ">=3.10"
authors = [
    {name = "Jamey Harris", email = "jameycharris@yahoo.com"},
]


dynamic = ["dependencies"]


[tool.setuptools]
packages = ["bizniz"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }